Fixed alignment Fixed bubble zindex

--- a/frontend/src/scenes/insights/filters/ActionFilter/ActionFilterRow/ActionFilterRow.scss
+++ b/frontend/src/scenes/insights/filters/ActionFilter/ActionFilterRow/ActionFilterRow.scss
@@ -8,34 +8,31 @@
         }
     }
 
-    .row-start,
-    .row-center,
-    .row-end {
+    .ActionFilterRow__start,
+    .ActionFilterRow__center,
+    .ActionFilterRow__end {
         display: flex;
         align-items: center;
     }
 
-    .row-start,
-    .row-end {
+    .ActionFilterRow__start,
+    .ActionFilterRow__end {
+        // Positions the elements in the center of the row but still aligned top when flex wrap kicks in
+        padding-top: 10px;
         flex: 0;
     }
 
-    .row-end {
-        padding-top: 5px;
+    .ActionFilterRow__end {
         > * + * {
             margin-left: 0.25rem;
         }
     }
 
-    .row-center {
+    .ActionFilterRow__center {
         flex: 1;
         overflow: hidden;
         flex-wrap: wrap;
         gap: 0.5rem;
-    }
-
-    .series-indicator {
-        padding-top: 5px;
     }
 }
 
